k8s/kubejencdp-app2/kubejencdp-app-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kubejencdp-app-dc
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kubejencdp-app
        updateTimestamp: "20191002160128233"
    spec:
      containers:
      - name: kubejencdp-app-ctr
        image: >-
          jimbono05/kubejencdp-app:1.0.0
        imagePullPolicy: Always
        ports:
        - name: httpport
          containerPort: 8080
