k8s/kubejencdp-app2/kubejencdp-app-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kubejencdp-app
  name: kubejencdp-app-svc
spec:
  ports:
    - name: httpport
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: kubejencdp-app
  sessionAffinity: None
  type: NodePort
