k8s/kubejencdp-app2/kubejencdp-app-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: kubejencdp-app
  name: kubejencdp-app-ingress
spec:
  backend:
    serviceName: kubejencdp-app-svc
    servicePort: httpport
